--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.46",
+    "jszip": "^3.10.1",
     "nuxt": "^4.0.0",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
